--- a/components/FilmList.module.css
+++ b/components/FilmList.module.css
@@ -1,40 +1,4 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  max-width: 800px;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .title a {
   color: #0070f3;
@@ -63,15 +27,6 @@
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
 .grid {
   display: flex;
   align-items: center;
@@ -82,6 +37,7 @@
 }
 
 .card {
+  display: flex;
   margin: 1rem;
   flex-basis: 100%;
   padding: 1.5rem;
@@ -101,7 +57,7 @@
 }
 
 .card h3 {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem 1rem;
   font-size: 1.5rem;
 }
 
@@ -111,8 +67,35 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
+.posterWrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.poster {
+  display: block;
+  border-radius: 4px;
+}
+
+.frame {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15);
+  background-image: linear-gradient(
+    90deg,
+    hsla(0, 0%, 100%, 0) 0,
+    hsla(0, 0%, 100%, 0.8) 50%,
+    hsla(0, 0%, 100%, 0)
+  );
+  background-repeat: no-repeat;
+  background-clip: padding-box;
+  background-size: 100% 1px;
 }
 
 @media (max-width: 600px) {
